log/build_2026-07-01_11-13-53/skai_bringup/stderr.log
  File "/home/tony/SKAI_clean_vision/install/skai_bringup/lib/python3.12/site-packages/skai_bringup/add_leaf.py", line 316
    self.move_to_position(
                         ^
SyntaxError: '(' was never closed

